# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: tests_and_lint.yml
gendiff/: __init__.py  diff_node.py  diff_tree_builder.py  form_json.py  gendiff_body.py  gendiff_description.py  gendiff_discription.py  parsers.py  plain.py  stylish.py
gendiff/cli/: gendiff_discription.py
gendiff/formatters/: __init__.py  form_json.py  plain.py  stylish.py
gendiff/scripts/: gendiff_main.py
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt
mods/scripts/: diff_main.py
tests/: gendiff_test.py
tests/test_data/: expected_diff.txt  expected_diff_json.json  expected_diff_plain.txt
