[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["gendiff"]
[tool.hatch.build.targets.wheel]
include = ["gendiff"]
packages = ["gendiff"]
[dependency-groups]
dev = [
    "ruff>=0.9.7",
]
[project.scripts]
gendiff = "mods.scripts.diff_main:main"